hacky fix webkit overflow scroll

--- a/app/styles/layout.styl
+++ b/app/styles/layout.styl
@@ -19,14 +19,7 @@
     left 0
     right 0
     bottom 0
-
-    &.ng-leave, &.ng-enter
-      .animated-view
-        position absolute
-        top 0
-        left 0
-        right 0
-        bottom 0
+    -webkit-transform: translateZ(0)
 
     &.ng-leave
       -webkit-animation: 0.5s empty
